Implementation exceptions and authorization